2012-03-03  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* tls.el (open-tls-stream): Don't set the dont-query-on-exit flag.
	This is inconsistent with all the other stream functions, which leave
	the setting up to the higher levels (if so wanted) (bug#10931).

2012-02-28  Glenn Morris  <rgm@gnu.org>

	* gmm-utils.el, gnus-agent.el, gnus-score.el, messagexmas.el,
	mm-decode.el: Standardize possessive apostrophe usage.

2012-02-25  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-column-specs): Protect against TDs with "width: 0%".

2012-02-25  Andreas Schwab  <schwab@linux-m68k.org>

	* parse-time.el (parse-time-string): Allow extractor to return nil.

2012-02-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nntp.el (nntp-send-authinfo): Work for secure nntp entry in authinfo.

2012-02-20  Lars Ingebrigtsen  <larsi@gnus.org>

	* mm-decode.el (mm-shr): Remove "soft hyphens".

	* nnimap.el (nnimap-request-list): Return the group names encoded as
	utf8.  Otherwise non-European group names don't work.
	(nnimap-request-newgroups): Ditto.

	* gnus-sum.el (gnus-summary-insert-old-articles): Fix the syntax for
	the default in `read-string' (bug#10757).

	* gnus-msg.el (gnus-group-post-news): Don't bug out on `C-u a' on
	topics (bug#10843).

	* nnimap.el (nnimap-log-command): Add the IMAP address to the log
	buffer.  Suggested by Herbert Valerio Riedel.
	(nnimap-request-move-article): Delete the message from the correct IMAP
	server.

2012-02-19  Vida Gábor  <vidagabor@gmail.com>  (tiny change)

	* gnus-demon.el (gnus-demon-init): Don't multiply time twice.
	Reported by Peter Münster.

2012-02-18  Lars Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-image-fetched): Make sure we really kill the right
	buffer.

2012-02-16  Leo Liu  <sdl.web@gmail.com>

	* gnus-start.el (gnus-1): Avoid duplicate entries.

2012-02-15  Lars Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-remove-trailing-whitespace): Really delete the padding on
	too-wide lines.
