@@ -1,3 +1,8 @@
+2012-03-04  Thierry Volpiatto  <thierry.volpiatto@gmail.com>
+
+	* gnus-msg.el (gnus-msg-mail): Call `message-mail' correctly when Gnus
+	isn't running (bug#10897).
+
 2012-03-03  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* tls.el (open-tls-stream): Don't set the dont-query-on-exit flag.
